[gd_scene load_steps=15 format=3 uid="uid://dikyi515jidoo"]

[ext_resource type="Script" path="res://Scripts/levels_sub_menu.gd" id="1_10ffj"]
[ext_resource type="Texture2D" uid="uid://6hubjjyotw4s" path="res://Galactic Arithmetic Assets/Level_Menu_Assets/level_panel/bg.png" id="1_yc5b4"]
[ext_resource type="Texture2D" uid="uid://gjmxwqq17iyp" path="res://Galactic Arithmetic Assets/Level_Menu_Assets/level_panel/ewan.png" id="2_ejrb4"]
[ext_resource type="Texture2D" uid="uid://b6whjkdysyeg" path="res://Galactic Arithmetic Assets/Level_Menu_Assets/level_panel/grass_holder.png" id="3_qne23"]
[ext_resource type="Texture2D" uid="uid://dpk8aj1das11a" path="res://Galactic Arithmetic Assets/Level_Menu_Assets/level_panel/grass.png" id="4_h2lit"]
[ext_resource type="Texture2D" uid="uid://jbbvb6brx65q" path="res://Galactic Arithmetic Assets/Level_Menu_Assets/level_panel/level1_normal.png" id="6_b53pc"]
[ext_resource type="Texture2D" uid="uid://rtii8qtk3ck8" path="res://Galactic Arithmetic Assets/Level_Menu_Assets/level_panel/level_2_normal.png" id="7_8jlov"]
[ext_resource type="Texture2D" uid="uid://djvso4f3l6104" path="res://Galactic Arithmetic Assets/Level_Menu_Assets/level_panel/level1_tap.png" id="7_vcfqo"]
[ext_resource type="Texture2D" uid="uid://dn6dfmy0a7v7h" path="res://Galactic Arithmetic Assets/Level_Menu_Assets/level_panel/level_2_tap.png" id="8_f2ujh"]
[ext_resource type="Texture2D" uid="uid://ospqk5r04vho" path="res://Galactic Arithmetic Assets/Level_Menu_Assets/level_panel/level3_normal.png" id="10_emo14"]
[ext_resource type="Texture2D" uid="uid://da0ujwnsf1l0n" path="res://Galactic Arithmetic Assets/Level_Menu_Assets/Padlock.png" id="10_s8t04"]
[ext_resource type="Texture2D" uid="uid://1mgvi8hjck03" path="res://Galactic Arithmetic Assets/Level_Menu_Assets/level_panel/level3_tap.png" id="11_gu1qg"]
[ext_resource type="Texture2D" uid="uid://cbwnar20vbvi6" path="res://Galactic Arithmetic Assets/Level_Menu_Assets/level_panel/close.png" id="13_jftyu"]
[ext_resource type="Texture2D" uid="uid://dh2us3h2p4v80" path="res://Galactic Arithmetic Assets/Level_Menu_Assets/level_panel/exit_button_tap.png" id="14_hesmp"]


[node name="levels_sub_menu" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_10ffj")

[node name="baka-bg" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -499.0
offset_top = -399.0
offset_right = 801.0
offset_bottom = 401.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.762235, 1)
texture = ExtResource("1_yc5b4")
expand_mode = 1

[node name="panel" type="TextureRect" parent="."]
self_modulate = Color(1, 1, 1, 0.580392)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -500.0
offset_top = -400.0
offset_right = 500.0
offset_bottom = 400.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_ejrb4")
expand_mode = 1

[node name="grass" type="TextureRect" parent="panel"]
self_modulate = Color(1, 1, 1, 0.313726)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -397.5
offset_top = -372.5
offset_right = 356.5
offset_bottom = -161.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_qne23")
expand_mode = 1

[node name="grass-text" type="TextureRect" parent="panel/grass"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -335.5
offset_top = -53.0
offset_right = 341.5
offset_bottom = 56.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_h2lit")

[node name="level1" type="TextureButton" parent="panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -206.0
offset_top = -100.0
offset_right = 206.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("6_b53pc")
texture_pressed = ExtResource("7_vcfqo")
ignore_texture_size = true
stretch_mode = 0

[node name="level2" type="TextureButton" parent="panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -206.0
offset_top = 50.0
offset_right = 206.0
offset_bottom = 166.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("7_8jlov")
texture_pressed = ExtResource("8_f2ujh")
ignore_texture_size = true
stretch_mode = 0

[node name="locked-lvl2" type="TextureRect" parent="panel/level2"]
self_modulate = Color(1, 1, 1, 0.686275)
layout_mode = 0
offset_top = 1.0
offset_right = 412.0
offset_bottom = 115.0
texture = ExtResource("10_s8t04")
expand_mode = 1
stretch_mode = 5

[node name="level3" type="TextureButton" parent="panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -206.0
offset_top = 200.0
offset_right = 206.0
offset_bottom = 316.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("10_emo14")
texture_pressed = ExtResource("11_gu1qg")
ignore_texture_size = true
stretch_mode = 0

[node name="locked-lvl3" type="TextureRect" parent="panel/level3"]
self_modulate = Color(1, 1, 1, 0.686275)
layout_mode = 0
offset_left = 1.0
offset_top = 1.0
offset_right = 410.0
offset_bottom = 115.0
texture = ExtResource("10_s8t04")
expand_mode = 1
stretch_mode = 5

[node name="exit_button" type="TextureButton" parent="panel"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -54.0
offset_top = -20.0
offset_right = 21.0
offset_bottom = 55.0
grow_horizontal = 0
texture_normal = ExtResource("13_jftyu")
texture_pressed = ExtResource("14_hesmp")
ignore_texture_size = true
stretch_mode = 0

[connection signal="pressed" from="panel/level1" to="." method="_on_level_1_pressed"]
[connection signal="pressed" from="panel/level2" to="." method="_on_level_2_pressed"]
[connection signal="pressed" from="panel/level3" to="." method="_on_level_3_pressed"]
[connection signal="pressed" from="panel/exit_button" to="." method="_on_exit_button_pressed"]
